[gd_scene load_steps=29 format=3 uid="uid://mycvdum3j3e7"]

[ext_resource type="PackedScene" uid="uid://5xjrlqdulx2k" path="res://scene/player.tscn" id="1_4lwku"]
[ext_resource type="Script" path="res://scripts/level.gd" id="1_e06ki"]
[ext_resource type="PackedScene" uid="uid://dwflaugcjnkcj" path="res://scene/ground_marker.tscn" id="3_4eoms"]
[ext_resource type="PackedScene" uid="uid://had3vaqtgdyv" path="res://assets/models/ArenaApron.glb" id="4_emtkf"]
[ext_resource type="PackedScene" uid="uid://dendrx1cl3lvj" path="res://assets/models/ArenaCornerPole.glb" id="5_5be5a"]
[ext_resource type="PackedScene" uid="uid://h0jwvkjrulp3" path="res://scene/swordfish.tscn" id="6_hmbnm"]

[sub_resource type="Curve" id="Curve_o8371"]
max_value = 5.0
_data = [Vector2(0, 2.75), 0.0, 0.0, 0, 0, Vector2(0.5, 2.25), 0.0, 0.0, 0, 0, Vector2(1, 1.75), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="Curve" id="Curve_34wpf"]
max_value = 5.0
_data = [Vector2(0, 4.25), 0.0, 0.0, 0, 0, Vector2(0.5, 3.5), 0.0, 0.0, 0, 0, Vector2(1, 3), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="Curve" id="Curve_5g188"]
max_value = 5.0
_data = [Vector2(0, 3.75), 0.0, 0.0, 0, 0, Vector2(0.5, 3), 0.0, 0.0, 0, 0, Vector2(1, 2.25), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="Curve" id="Curve_rs33r"]
max_value = 5.0
_data = [Vector2(0, 2.25), 0.0, 0.0, 0, 0, Vector2(0.5, 2), 0.0, 0.0, 0, 0, Vector2(1, 1.25), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="Curve" id="Curve_caa00"]
max_value = 5.0
_data = [Vector2(0, 3), 0.0, 0.0, 0, 0, Vector2(0.5, 2), 0.0, 0.0, 0, 0, Vector2(1, 1.25), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 40

[sub_resource type="Curve" id="Curve_5fnpc"]
max_value = 5.0
_data = [Vector2(0, 2.25), 0.0, 0.0, 0, 0, Vector2(0.5, 1.75), 0.0, 0.0, 0, 0, Vector2(1, 1.25), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_pmq2o"]
sky_top_color = Color(0.325, 0.24, 0.75, 1)
sky_horizon_color = Color(0.55, 0.275, 0.490417, 1)
ground_bottom_color = Color(0.205117, 0.205117, 0.205117, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
energy_multiplier = 0.97

[sub_resource type="Sky" id="Sky_kjsdp"]
sky_material = SubResource("ProceduralSkyMaterial_pmq2o")

[sub_resource type="Environment" id="Environment_du7dn"]
background_mode = 2
sky = SubResource("Sky_kjsdp")
ambient_light_sky_contribution = 0.6
ambient_light_energy = 0.6
tonemap_mode = 3
tonemap_exposure = 0.97
tonemap_white = 6.0

[sub_resource type="NavigationMesh" id="NavigationMesh_dx50t"]
vertices = PackedVector3Array(-24.5, 0.02, -24.5, -24.5, 0.02, 24.5, 24.5, 0.02, 24.5, 24.5, 0.02, -24.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
cell_height = 0.01

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lbgrh"]
albedo_color = Color(0.65, 0.65, 0.65, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_sajsk"]
material = SubResource("StandardMaterial3D_lbgrh")
size = Vector2(50, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_exmgm"]
size = Vector3(50, 1, 50)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1t47y"]
bounce = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_or3le"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_cji7g"]
material = SubResource("StandardMaterial3D_or3le")
top_radius = 0.15
bottom_radius = 0.15
height = 48.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_okf7k"]

[sub_resource type="CylinderMesh" id="CylinderMesh_s3uvk"]
material = SubResource("StandardMaterial3D_okf7k")
top_radius = 0.2
bottom_radius = 0.2
height = 48.0

[sub_resource type="BoxShape3D" id="BoxShape3D_k8r8u"]
size = Vector3(10, 6, 50)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_oohvu"]
bounce = 1.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_u76v8"]
bounce = 1.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_xx07k"]
bounce = 1.0

[node name="Level" type="Node3D"]
process_mode = 1
script = ExtResource("1_e06ki")
money_spawner_curve = SubResource("Curve_o8371")
money_spawner2_curve = SubResource("Curve_34wpf")
money_spawner3_curve = SubResource("Curve_5g188")
bomb_spawner_curve = SubResource("Curve_rs33r")
bomb_spawner2_curve = SubResource("Curve_caa00")
bomb_spawner3_curve = SubResource("Curve_5fnpc")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_du7dn")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_color = Color(0.894118, 0.909804, 0.705882, 1)
light_energy = 0.16
light_indirect_energy = 0.25
shadow_enabled = true
shadow_opacity = 0.87

[node name="WorldObjects" type="Node3D" parent="."]

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="WorldObjects"]
navigation_mesh = SubResource("NavigationMesh_dx50t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldObjects/NavigationRegion3D"]
mesh = SubResource("PlaneMesh_sajsk")
skeleton = NodePath("../../..")

[node name="Arena" type="StaticBody3D" parent="WorldObjects/NavigationRegion3D" groups=["Arena"]]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldObjects/NavigationRegion3D/Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_exmgm")

[node name="ArenaApron" parent="WorldObjects" instance=ExtResource("4_emtkf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)

[node name="ArenaCornerPole" parent="WorldObjects" instance=ExtResource("5_5be5a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.5, -5, 26.5)

[node name="ArenaCornerPole2" parent="WorldObjects" instance=ExtResource("5_5be5a")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -26.5, -5, -26.5)

[node name="ArenaCornerPole3" parent="WorldObjects" instance=ExtResource("5_5be5a")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 26.5, -5, -26.5)

[node name="ArenaCornerPole4" parent="WorldObjects" instance=ExtResource("5_5be5a")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 26.5, -5, 26.5)

[node name="SpotLight3D" type="SpotLight3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 12, 30, -12)
light_energy = 14.0
light_indirect_energy = 5.0
light_volumetric_fog_energy = 5.0
light_specular = 1.0
shadow_enabled = true
shadow_opacity = 0.87
spot_range = 80.0
spot_angle = 37.0

[node name="SpotLight3D2" type="SpotLight3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 12, 30, 12)
light_energy = 14.0
light_indirect_energy = 5.0
light_volumetric_fog_energy = 5.0
light_specular = 1.0
shadow_enabled = true
shadow_opacity = 0.87
spot_range = 80.0
spot_angle = 37.0

[node name="SpotLight3D3" type="SpotLight3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -12, 30, -12)
light_energy = 14.0
light_indirect_energy = 5.0
light_volumetric_fog_energy = 5.0
light_specular = 1.0
shadow_enabled = true
shadow_opacity = 0.87
spot_range = 80.0
spot_angle = 37.0

[node name="SpotLight3D4" type="SpotLight3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -12, 30, 12)
light_energy = 14.0
light_indirect_energy = 5.0
light_volumetric_fog_energy = 5.0
light_specular = 1.0
shadow_enabled = true
shadow_opacity = 0.87
spot_range = 80.0
spot_angle = 37.0

[node name="Ropes" type="StaticBody3D" parent="WorldObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.5, 0, 0)
disable_mode = 1
collision_layer = 33
collision_mask = 33
physics_material_override = SubResource("PhysicsMaterial_1t47y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldObjects/Ropes"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3, 0)
mesh = SubResource("CylinderMesh_cji7g")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WorldObjects/Ropes"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
mesh = SubResource("CylinderMesh_s3uvk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldObjects/Ropes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 2, 0)
shape = SubResource("BoxShape3D_k8r8u")

[node name="Ropes2" type="StaticBody3D" parent="WorldObjects"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -24.5, 0, 0)
disable_mode = 1
collision_layer = 33
collision_mask = 33
physics_material_override = SubResource("PhysicsMaterial_oohvu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldObjects/Ropes2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3, 0)
mesh = SubResource("CylinderMesh_cji7g")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WorldObjects/Ropes2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
mesh = SubResource("CylinderMesh_s3uvk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldObjects/Ropes2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 2, 0)
shape = SubResource("BoxShape3D_k8r8u")

[node name="Ropes3" type="StaticBody3D" parent="WorldObjects"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -24.5)
disable_mode = 1
collision_layer = 33
collision_mask = 33
physics_material_override = SubResource("PhysicsMaterial_u76v8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldObjects/Ropes3"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3, 0)
mesh = SubResource("CylinderMesh_cji7g")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WorldObjects/Ropes3"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
mesh = SubResource("CylinderMesh_s3uvk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldObjects/Ropes3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 2, 0)
shape = SubResource("BoxShape3D_k8r8u")

[node name="Ropes4" type="StaticBody3D" parent="WorldObjects"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 24.5)
disable_mode = 1
collision_layer = 33
collision_mask = 33
physics_material_override = SubResource("PhysicsMaterial_xx07k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldObjects/Ropes4"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3, 0)
mesh = SubResource("CylinderMesh_cji7g")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="WorldObjects/Ropes4"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
mesh = SubResource("CylinderMesh_s3uvk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldObjects/Ropes4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 2, 0)
shape = SubResource("BoxShape3D_k8r8u")

[node name="Tossers" type="Node" parent="."]

[node name="Tosser" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 0)

[node name="Tosser2" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 0)

[node name="Tosser3" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -30)

[node name="Tosser4" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30)

[node name="Tosser5" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, -13.25)

[node name="Tosser6" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 13.25)

[node name="Tosser7" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, -13.25)

[node name="Tosser8" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 13.25)

[node name="Tosser9" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.25, 0, -30)

[node name="Tosser10" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.25, 0, -30)

[node name="Tosser11" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.25, 0, 30)

[node name="Tosser12" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.25, 0, 30)

[node name="Tosser13" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, -6.625)

[node name="Tosser14" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 6.625)

[node name="Tosser15" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, -6.625)

[node name="Tosser16" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 6.625)

[node name="Tosser17" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.625, 0, -30)

[node name="Tosser18" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.625, 0, -30)

[node name="Tosser19" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.625, 0, 30)

[node name="Tosser20" type="Node3D" parent="Tossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.625, 0, 30)

[node name="SwordfishTossers" type="Node" parent="."]

[node name="SwordfishTosser1" type="Node3D" parent="SwordfishTossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 45)

[node name="SwordfishTosser2" type="Node3D" parent="SwordfishTossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -45)

[node name="SwordfishTosser3" type="Node3D" parent="SwordfishTossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.25, 0.5, 45)

[node name="SwordfishTosser4" type="Node3D" parent="SwordfishTossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.25, 0.5, -45)

[node name="SwordfishTosser5" type="Node3D" parent="SwordfishTossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.25, 0.5, 45)

[node name="SwordfishTosser6" type="Node3D" parent="SwordfishTossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.25, 0.5, -45)

[node name="SwordfishTosser7" type="Node3D" parent="SwordfishTossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.625, 0.5, 45)

[node name="SwordfishTosser8" type="Node3D" parent="SwordfishTossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.625, 0.5, -45)

[node name="SwordfishTosser9" type="Node3D" parent="SwordfishTossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.625, 0.5, 45)

[node name="SwordfishTosser10" type="Node3D" parent="SwordfishTossers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.625, 0.5, -45)

[node name="Timers" type="Node" parent="."]

[node name="GameTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 180.0
one_shot = true
autostart = true

[node name="MoneySpawner" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 1.87
autostart = true

[node name="MoneySpawner2" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 2.47

[node name="MoneySpawner3" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 1.56

[node name="BombSpawner" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 2.5
autostart = true

[node name="BombSpawner2" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 1.87

[node name="BombSpawner3" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 1.45

[node name="Player" parent="." instance=ExtResource("1_4lwku")]

[node name="AudioPlayers" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0.866026, -0.5, 0, 0.5, 0.866026, 1, 3.78552e-08, -2.18557e-08, -25, 25, 0)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0)
top_level = true
target_position = Vector3(0, -4000, 0)
collision_mask = 2
debug_shape_custom_color = Color(1, 0, 0.966667, 1)
debug_shape_thickness = 5

[node name="AudioListener3D" type="AudioListener3D" parent="Camera3D"]
current = true

[node name="GroundMarker" parent="." instance=ExtResource("3_4eoms")]
visible = false

[node name="SwordFish" parent="." instance=ExtResource("6_hmbnm")]
transform = Transform3D(-3, 0, -2.62268e-07, 0, 3, 0, 2.62268e-07, 0, -3, 0, 1, 50)

[node name="SwordFish2" parent="." instance=ExtResource("6_hmbnm")]
transform = Transform3D(-3, 0, -2.62268e-07, 0, 3, 0, 2.62268e-07, 0, -3, 0, 1, 50)
anim_delay = 36.0

[connection signal="timeout" from="Timers/MoneySpawner" to="." method="_on_money_spawner_timeout"]
[connection signal="timeout" from="Timers/MoneySpawner2" to="." method="_on_money_spawner2_timeout"]
[connection signal="timeout" from="Timers/MoneySpawner3" to="." method="_on_money_spawner3_timeout"]
[connection signal="timeout" from="Timers/BombSpawner" to="." method="_on_bomb_spawner_timeout"]
[connection signal="timeout" from="Timers/BombSpawner2" to="." method="_on_bomb_spawner2_timeout"]
[connection signal="timeout" from="Timers/BombSpawner3" to="." method="_on_bomb_spawner3_timeout"]
